fixed overflow error

--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -20,10 +20,6 @@
     color      : #ffffff;
     font-weight: bold;
 
-    // h1 {
-    //     font-weight: 400;
-    //     font-size  : 3.4rem;
-    // }
     h1 {
         font-weight      : 300;
         font-size        : 4rem;
@@ -43,7 +39,7 @@
     padding: 30px 30px 30px 30px;
 
     .row {
-        height: 400px;
+        height: 450px;
 
         .col-intro {
             display        : flex;
@@ -52,19 +48,19 @@
             flex-direction : column;
 
             &#col-intro-img {
-                img {
-                    background-color: rgba(0, 0, 0, 0.65);
-                    width           : 475px;
-                    height          : 325px;
-                }
 
-                // img {
-                //     width : 525px;
-                //     height: 380px;
-                // }
+                .intro-image-div {
+                    background         : linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("/images/home-intro.jpg");
+                    background-size    : cover;
+                    background-position: center center;
+                    background-repeat  : no-repeat;
+                    width              : 500px;
+                    height             : 355px;
+                }
             }
 
             &#col-intro-text {
+                padding : 0 70px;
                 // width: 75%;
 
                 h3 {
@@ -72,12 +68,12 @@
                     text-align    : center;
                     text-transform: uppercase;
                     font-weight   : 400;
-                    font-size     : 1.6rem;
+                    font-size     : 1.8rem;
                 }
 
                 p {
-                    font-size: .90rem;
-                    padding  : 0 30px 0 30px;
+                    font-size   : .95rem;
+                    // padding  : 0 30px 0 30px;
                 }
 
                 // h2 {
